# pingpong

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  raylib_game.cpp  screen_ending.cpp  screen_gameplay.cpp  screen_logo.cpp  screen_options.cpp  screen_title.cpp  screens.hpp
src/logic/: Ball.hpp  Board.hpp  GamePad.hpp  Plate.hpp
